# Bot-Rust

./: Cargo.toml  example.env
src/: config.rs  main.rs  state.rs
src/commands/: mod.rs  ping.rs  sync.rs
src/commands/developer/: mod.rs  sync.rs
src/commands/general/: botinfo.rs  mod.rs  ping.rs
src/core/: client.rs  framework.rs  logging.rs  mod.rs  state.rs
